# restaurant-reservation-system

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  seed.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  reservation.py  reservation_slot.py  restaurant.py  table.py  user.py
backend/app/repositories/: __init__.py  reservation_repository.py  restaurant_repository.py  slot_repository.py  table_repository.py  user_repository.py
backend/app/routes/: __init__.py  auth_routes.py  category_routes.py  reservation_routes.py  restaurant_routes.py  slot_routes.py  table_routes.py
backend/app/services/: __init__.py  auth_service.py  reservation_service.py  restaurant_service.py  slot_service.py  table_service.py
docs/: documentation.md
frontend/: package-lock.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.ts  app.routes.ts
frontend/src/app/core/: auth.guard.ts  auth.service.ts  reservation.service.ts  restaurant.service.ts  slot.service.ts  table.service.ts
frontend/src/app/features/admin/admin-reservations/: admin-reservations.component.html  admin-reservations.component.ts
frontend/src/app/features/admin/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/src/app/features/profile/: profile.component.html  profile.component.ts
frontend/src/app/shared/models/: reservation.model.ts  restaurant.model.ts  slot.model.ts  table.model.ts  user.model.ts
prompts/: README.md  Refine Reservation System Features.md
(+16 files in other folders)
